# 4WindowsViewer

./: .gitignore  CMakeLists.txt  ImageViewer.pro  RubberRect.cpp  RubberRect.h  asm_opencv.h  image-item.cpp  image-item.h  image-processing-common.h  image-view.cpp  image-view.h  imageprocessor.cpp  imageprocessor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ocv_qt.h  opencv_processor.h  opencv_qt_pixelwise.h  pixelruler.cpp  pixelruler.h  pointitem.cpp  pointitem.h
